--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "VeryGuard Backend",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "node server.js"
   },
   "author": "Yashiro",
   "license": "ISC",
